Update upload image product

--- a/deskover-dashboard-website/src/app/pages/product/product.component.html
+++ b/deskover-dashboard-website/src/app/pages/product/product.component.html
@@ -134,7 +134,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form #productForm="ngForm">
+        <form #productForm="ngForm" enctype="multipart/form-data">
           <div class="row">
             <div class="col-12 col-lg-4">
               <div class="col-12 mb-3">
