--- a/deskover-ecommerce-website/src/main/webapp/assets/jumbotron-narrow.css
+++ b/deskover-ecommerce-website/src/main/webapp/assets/jumbotron-narrow.css
@@ -1,66 +1,66 @@
 /* Space out content a bit */
 body {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
 .footer {
-  padding-right: 1rem;
-  padding-left: 1rem;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 /* Custom page header */
 .header {
-  padding-bottom: 1rem;
-  border-bottom: .05rem solid #e5e5e5;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #e5e5e5;
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
   margin-top: 0;
   margin-bottom: 0;
-  line-height: 3rem;
+  line-height: 40px;
 }
 
 /* Custom page footer */
 .footer {
-  padding-top: 1.5rem;
+  padding-top: 19px;
   color: #777;
-  border-top: .05rem solid #e5e5e5;
+  border-top: 1px solid #e5e5e5;
 }
 
 /* Customize container */
-@media (min-width: 48em) {
+@media (min-width: 768px) {
   .container {
-    /*max-width: 46rem;*/
+    max-width: 970px;
   }
 }
 .container-narrow > hr {
-  margin: 2rem 0;
+  margin: 30px 0;
 }
 
 /* Main marketing message and sign up button */
 .jumbotron {
   text-align: center;
-  border-bottom: .05rem solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
 }
 .jumbotron .btn {
-  padding: .75rem 1.5rem;
-  font-size: 1.5rem;
+  padding: 14px 24px;
+  font-size: 21px;
 }
 
 /* Supporting marketing content */
 .marketing {
-  margin: 3rem 0;
+  margin: 40px 0;
 }
 .marketing p + h4 {
-  margin-top: 1.5rem;
+  margin-top: 28px;
 }
 
 /* Responsive: Portrait tablets and up */
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 768px) {
   /* Remove the padding we set earlier */
   .header,
   .marketing,
@@ -70,14 +70,13 @@ body {
   }
   /* Space out the masthead */
   .header {
-    margin-bottom: 2rem;
+    margin-bottom: 30px;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
   }
 }
-
 .pay-success{ color: blue;}
 .pay-unsuccess{ color:black;}
 .pay-error{ color:red;}
