--- a/deskover-dashboard-website/src/app/pages/product/product.component.html
+++ b/deskover-dashboard-website/src/app/pages/product/product.component.html
@@ -34,9 +34,18 @@
             <label for="filter-category" class="col-form-label">Danh mục:</label>
           </div>
           <div class="col-md-auto col-sm-12 mt-0 mt-md-2">
-            <select id="filter-category" class="form-select" [(ngModel)]="category_id_filter" (change)="filter()">
+            <select id="filter-category" class="form-select" [(ngModel)]="categoryIdFilter" (change)="filter()">
               <option [ngValue]="null">Tất cả</option>
               <option *ngFor="let category of categories" [ngValue]="category.id">{{category.name}}</option>
+            </select>
+          </div>
+          <div class="col-md-auto col-sm-12">
+            <label for="filter-brand" class="col-form-label">Thương hiệu:</label>
+          </div>
+          <div class="col-md-auto col-sm-12 mt-0 mt-md-2">
+            <select id="filter-brand" class="form-select" [(ngModel)]="brandIdFilter" (change)="filter()">
+              <option [ngValue]="null">Tất cả</option>
+              <option *ngFor="let brand of brands" [ngValue]="brand.id">{{brand.name}}</option>
             </select>
           </div>
           <!-- Filter - End -->
@@ -68,7 +77,7 @@
             <tbody *ngIf="products?.length !== 0">
             <tr *ngFor="let item of products; let i = index">
               <td class="align-middle">
-                <img src="{{item.imageUrl}}" class="img-thumbnail"
+                <img src="{{item.imageUrl || 'assets/images/no-image.png'}}" class="img-thumbnail"
                      style="max-width:70px; height: 70px" alt="product-thumbnail">
               </td>
               <td class="align-middle">
