Cập nhật lại bảng danh sách sản phẩm khuyến mãi

--- a/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
@@ -112,7 +112,7 @@
   </div>
 </section>
 <!-- Modal - Start -->
-<div bsModal #subcategoryModal="bs-modal" class="modal fade" tabindex="-1" data-bs-focus="false">
+<div bsModal [config]="{backdrop: 'static'}" #subcategoryModal="bs-modal" class="modal fade" tabindex="-1" data-bs-focus="false">
      role="dialog" aria-labelledby="subcategory-dialog-sizes">
   <div class="modal-dialog modal-dialog-centered modal-md">
     <div class="modal-content">
