--- a/deskover-dashboard-website/src/app/pages/product/product.component.html
+++ b/deskover-dashboard-website/src/app/pages/product/product.component.html
@@ -129,7 +129,7 @@
   </div>
 </section>
 <!-- Modal - Start -->
-<div bsModal #productModal="bs-modal" class="modal" tabindex="-1" data-bs-focus="false"
+<div bsModal [config]="{backdrop: 'static'}" #productModal="bs-modal" class="modal" tabindex="-1" data-bs-focus="false"
      role="dialog" aria-labelledby="product-dialog-sizes">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
     <div class="modal-content">
