Sửa và tạo trang thông tin sản phẩm

--- a/deskover-ecommerce-website/src/main/resources/templates/components/scripts.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/scripts.html
@@ -1,18 +1,17 @@
 <div th:fragment="scripts">
 <!-- Vendor scrits: js libraries and plugins-->
-<script th:src="@{/vendor/bootstrap/dist/js/bootstrap.bundle.min.js}"></script>
-<script th:src="@{/vendor/wnumb/dist/wNumb.min.js}"></script>
-<script th:src="@{/vendor/simplebar/dist/simplebar.min.js}"></script>
-<script th:src="@{/vendor/tiny-slider/dist/min/tiny-slider.js}"></script>
-<script th:src="@{/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js}"></script>
-<script th:src="@{/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js}"></script>
-<script th:src="@{/vendor/nouislider/dist/nouislider.min.js}"></script>
-<script th:src="@{/vendor/drift-zoom/dist/Drift.min.js}"></script>
-<script th:src="@{/vendor/lightgallery.js/dist/js/lightgallery.min.js}"></script>
-<script th:src="@{/vendor/lg-video.js/dist/lg-video.min.js}"></script>
+<script th:src="@{/res/vendor/bootstrap/dist/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/res/vendor/wnumb/dist/wNumb.min.js}"></script>
+<script th:src="@{/res/vendor/simplebar/dist/simplebar.min.js}"></script>
+<script th:src="@{/res/vendor/tiny-slider/dist/min/tiny-slider.js}"></script>
+<script th:src="@{/res/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js}"></script>
+<script th:src="@{/res/vendor/nouislider/dist/nouislider.min.js}"></script>
+<script th:src="@{/res/vendor/drift-zoom/dist/Drift.min.js}"></script>
+<script th:src="@{/res/vendor/lightgallery.js/dist/js/lightgallery.min.js}"></script>
+<script th:src="@{/res/vendor/lg-video.js/dist/lg-video.min.js}"></script>
 <!-- Main theme script-->
-<script th:src="@{/js/theme.min.js}"></script>
+<script th:src="@{/res/js/theme.min.js}"></script>
 <!-- Angularjs script-->
-<script th:src="@{/vendor/angularjs/dist/angular.min.js}"></script>
-<script th:src="@{/app/main.angular.js}"></script>
+<script th:src="@{/res/vendor/angularjs/dist/angular.min.js}"></script>
+<script th:src="@{/res/app/main.angular.js}"></script>
 </div>
