--- a/deskover-ecommerce-website/src/main/resources/templates/error/500.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/error/500.html
@@ -13,7 +13,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,900" rel="stylesheet">
 
 	<!-- Custom stlylesheet -->
-	<link type="text/css" rel="stylesheet" th:href="@{/css/theme.error.css}" />
+	<link type="text/css" rel="stylesheet" th:href="@{/res/css/theme.error.css}" />
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,7 +31,7 @@
 			<div class="notfound-404">
 				<h1>500</h1>
 			</div>
-			<img th:src="@{/img/logo/full.png}" width="450" alt="Deskover">
+			<img th:src="@{/res/img/logo/full.png}" width="450" alt="Deskover">
 			<h2>Internet Server Error</h2>
 			<p>Có lỗi hệ thống</p>
 			<a th:href="@{/index}">Về trang chủ</a>
