--- a/deskover-ecommerce-website/src/main/resources/templates/index.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/index.html
@@ -2,25 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org"
     th:replace="~{layout/layout :: layout(  
         ~{::title},
+        ~{::modal_out},
+        ~{::modal_in},
+        ~{::#handheld},
         ~{::#content}
     )}">
 <head>
     <title>Title of About Page</title>
 </head>
 <body id="content">
-    
-    <!-- Page Title-->
-    <nav th:replace="~{components/page_title :: component(  
-        ~{::#title},
-        ~{::#breadcrumb}
-    )}">
-        <div class="title">test</div>
-        <ol class="breadcrumb breadcrumb-light flex-lg-nowrap justify-content-center justify-content-lg-start">
-            <li class="breadcrumb-item"><a class="text-nowrap" href="index.html"><i class="ci-home"></i>Home</a></li>
-            <li class="breadcrumb-item text-nowrap"><a href="shop-grid-ls.html">Shop</a>
-            </li>
-            <li class="breadcrumb-item text-nowrap active" aria-current="page">Cart</li>
-        </ol>
-    </nav>
+    <div id="modal_out">
+
+    </div>
+    <div id="modal_in">
+    </div>
+    <div id="content" th:remove="tag">
+
+    </div>
+    <div id="handheld" th:remove="tag">
+        <!-- Toolbar for handheld devices (Shop)-->
+        <div class="handheld-toolbar ha">
+            <div class="d-table table-layout-fixed w-100"><a class="d-table-cell handheld-toolbar-item" href="#" data-bs-toggle="offcanvas" data-bs-target="#shop-sidebar"><span class="handheld-toolbar-icon"><i class="ci-filter-alt"></i></span><span class="handheld-toolbar-label">Filters</span></a>
+                <a class="d-table-cell handheld-toolbar-item" href="account-wishlist.html"><span class="handheld-toolbar-icon"><i class="ci-heart"></i></span><span class="handheld-toolbar-label">Wishlist</span></a><a class="d-table-cell handheld-toolbar-item" href="javascript:void(0)" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" onclick="window.scrollTo(0, 0)"><span class="handheld-toolbar-icon"><i class="ci-menu"></i></span><span class="handheld-toolbar-label">Menu</span></a><a class="d-table-cell handheld-toolbar-item" href="shop-cart.html"><span class="handheld-toolbar-icon"><i class="ci-cart"></i><span class="badge bg-primary rounded-pill ms-1">4</span></span><span class="handheld-toolbar-label">$265.00</span></a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
