--- a/deskover-dashboard-website/src/app/components/layouts/menu-sidebar/menu-sidebar.component.html
+++ b/deskover-dashboard-website/src/app/components/layouts/menu-sidebar/menu-sidebar.component.html
@@ -1,13 +1,13 @@
 <!-- Brand Logo -->
 <a [routerLink]="['/']" class="brand-link border-bottom-0">
     <img
-        src="assets/images/logo/logo-icon.png"
+        src="../../../../assets/images/logo/logo-icon.png"
         alt="Deskover"
         class="brand-image img-circle elevation-3"
         style="opacity: 0.8"
     />
     <span class="brand-text text-center">
-      <img src="assets/images/logo/logo.png" width="200" class="img-fluid" alt="logo">
+      <img src="../../../../assets/images/logo/logo.png" width="200" class="img-fluid" alt="logo">
     </span>
 </a>
 
