Fix conflict name controller

--- a/deskover-dashboard-website/src/app/components/home/manage/category/subcategory/subcategory.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/category/subcategory/subcategory.component.html
@@ -52,7 +52,7 @@
 
       <div class="card-body p-0">
         <div class="table-responsive p-3">
-          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
+          <table datatable [dtOptions]="dtOptions"
                  class="table table-hover table-sm nowrap w-100">
             <thead class="table-primary">
             <tr>
