--- a/deskover-dashboard-website/src/app/components/home/manage/category/subcategory/subcategory.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/category/subcategory/subcategory.component.html
@@ -56,6 +56,7 @@
                  class="table table-hover table-sm nowrap w-100">
             <thead class="table-primary">
             <tr>
+              <th class="align-middle">Ảnh</th>
               <th class="align-middle">Tên</th>
               <th class="align-middle">Slug</th>
               <th class="align-middle">Mô tả</th>
@@ -66,6 +67,9 @@
             </thead>
             <tbody *ngIf="subcategories?.length !== 0">
             <tr *ngFor="let item of subcategories; let i = index">
+              <td class="align-middle">
+                <img src="{{ item.imgUrl || 'assets/images/no-image.png' }}" class="img-fluid" width="50">
+              </td>
               <td class="align-middle">
                 {{ item.name }}
               </td>
