--- a/deskover-dashboard-website/src/styles.scss
+++ b/deskover-dashboard-website/src/styles.scss
@@ -66,6 +66,8 @@ tr, td {
   cursor: pointer;
   display: flex;
   align-items: center;
+  height: 100%;
+  width: 100%;
 
   .file-drop-input {
     display: block;
