--- a/deskover-dashboard-website/src/app/components/home/manage/category/subcategory/subcategory.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/category/subcategory/subcategory.component.html
@@ -22,7 +22,7 @@
       <div class="card-header">
         <div class="row g-2">
           <div class="col-auto">
-            <label for="filter-active" class="col-form-label">Trạng thái:</label>
+            <label [for]="'filter-active'" class="col-form-label">Trạng thái:</label>
           </div>
           <div class="col-md-auto col-sm-12 mt-0 mt-md-2">
             <select id="filter-active" class="form-select" [(ngModel)]="isActive" (change)="filter()">
@@ -31,7 +31,7 @@
             </select>
           </div>
           <div class="col-md-auto col-sm-12">
-            <label for="filter-category" class="col-form-label">Danh mục cha:</label>
+            <label [for]="'filter-category'" class="col-form-label">Danh mục cha:</label>
           </div>
           <div class="col-md-auto col-sm-12 mt-0 mt-md-2">
             <select id="filter-category" class="form-select" [(ngModel)]="categoryId" (change)="filter()">
@@ -68,7 +68,7 @@
             <tbody *ngIf="subcategories?.length !== 0">
             <tr *ngFor="let item of subcategories; let i = index">
               <td class="align-middle">
-                <img src="{{ item.imgUrl || 'assets/images/no-image.png' }}" class="img-fluid" width="50">
+                <img src="{{ item.imgUrl || 'assets/images/no-image.png' }}" class="img-fluid img-thumbnail img-50">
               </td>
               <td class="align-middle">
                 {{ item.name }}
@@ -131,24 +131,35 @@
       </div>
       <div class="modal-body">
         <form #subcategoryForm="ngForm">
-          <div class="mb-3">
-            <label class="form-label" for="name">Tên</label>
-            <input type="text" class="form-control" id="name" name="name" [(ngModel)]="subcategory.name"
-                   (keyup)="subcategory.slug = toSlug(subcategory.name)" #name="ngModel" required/>
-            <div class="invalid-feedback" *ngIf="name.invalid && (name.dirty || name.touched)">
-              <span *ngIf="name.errors?.['required']">Vui lòng nhập tên</span>
+          <div class="row">
+            <div class="col-12 col-md-5 mb-3">
+              <div class="d-flex justify-content-center align-items-center file-drop-area border rounded-4">
+                <img src="{{subcategory?.imgUrl ?? 'assets/images/no-image.png'}}" class="img-fluid w-100">
+                <input type="file" name="image" class="file-drop-input" accept="image/*"
+                       (change)="selectedImageChanged($event)">
+              </div>
+            </div>
+            <div class="col-12 col-md-7">
+              <div class="mb-3">
+                <label class="form-label" [for]="'name'">Tên</label>
+                <input type="text" class="form-control" id="name" name="name" [(ngModel)]="subcategory.name"
+                       (keyup)="subcategory.slug = toSlug(subcategory.name)" #name="ngModel" required/>
+                <div class="invalid-feedback" *ngIf="name.invalid && (name.dirty || name.touched)">
+                  <span *ngIf="name.errors?.['required']">Vui lòng nhập tên</span>
+                </div>
+              </div>
+              <div class="mb-3">
+                <label class="form-label" [for]="'slug'">Slug</label>
+                <input type="text" class="form-control" id="slug" name="slug" [(ngModel)]="subcategory.slug"
+                       #slug="ngModel" required/>
+                <div class="invalid-feedback" *ngIf="slug.invalid && (slug.dirty || slug.touched)">
+                  <span *ngIf="slug.errors?.['required']">Vui lòng nhập slug</span>
+                </div>
+              </div>
             </div>
           </div>
           <div class="mb-3">
-            <label class="form-label" for="slug">Slug</label>
-            <input type="text" class="form-control" id="slug" name="slug" [(ngModel)]="subcategory.slug"
-                   #slug="ngModel" required/>
-            <div class="invalid-feedback" *ngIf="slug.invalid && (slug.dirty || slug.touched)">
-              <span *ngIf="slug.errors?.['required']">Vui lòng nhập slug</span>
-            </div>
-          </div>
-          <div class="mb-3">
-            <label class="form-label" for="category">Danh mục cha</label>
+            <label class="form-label" [for]="'category'">Danh mục cha</label>
             <select id="category" class="custom-select" name="category" [(ngModel)]="subcategory.category" [compareWith]="compareFn"
                     #category="ngModel" required>
               <option value="">-- Chọn danh mục cha --</option>
@@ -159,7 +170,7 @@
             </div>
           </div>
           <div class="mb-3">
-            <label for="description" class="form-label">Mô tả</label>
+            <label [for]="'description'" class="form-label">Mô tả</label>
             <textarea class="form-control" id="description" rows="4" name="description"
                       [(ngModel)]="subcategory.description" #description="ngModel"></textarea>
 
